--- a/Slides.html
+++ b/Slides.html
@@ -351,7 +351,7 @@ MdC. Fabio Cruz
 <li><a href="#/planning" id="/toc-planning">Planning</a></li>
 <li><a href="#/engineering-and-âge-du-faire-diy" id="/toc-engineering-and-âge-du-faire-diy">Engineering and ‘Âge du Faire / DIY’</a></li>
 <li><a href="#/lorraine-fab-living-lab" id="/toc-lorraine-fab-living-lab">Lorraine Fab Living Lab</a></li>
-<li><a href="#/tp-design-you-prototype" id="/toc-tp-design-you-prototype">TP: Design you prototype</a></li>
+<li><a href="#/tp-design-your-prototype" id="/toc-tp-design-your-prototype">TP: Design your prototype</a></li>
 </ul>
 </nav>
 </section>
@@ -375,15 +375,15 @@ MdC. Fabio Cruz
 <td style="text-align: left;">Introduction to LF2L and key concepts</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">14:15 - 15:00</td>
+<td style="text-align: left;">14:15 - 15:15</td>
 <td style="text-align: left;"><strong>Design</strong></td>
 </tr>
 <tr class="odd">
-<td style="text-align: left;">15:00 - 15:20</td>
+<td style="text-align: left;">15:15 - 15:30</td>
 <td style="text-align: left;"><em>Break</em> 🍏</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">15:20 - 16:00</td>
+<td style="text-align: left;">15:30 - 16:00</td>
 <td style="text-align: left;"><strong>Fabricate</strong></td>
 </tr>
 <tr class="odd">
@@ -608,8 +608,16 @@ MdC. Fabio Cruz
 <section id="questions" class="slide level2 center">
 <h2>Questions?</h2>
 </section></section>
-<section id="tp-design-you-prototype" class="title-slide slide level1 center">
-<h1>TP: Design you prototype</h1>
+<section id="tp-design-your-prototype" class="title-slide slide level1 center">
+<h1>TP: Design your prototype</h1>
+<ol type="1">
+<li>DIY some tutorials on Inkscape on 🎥 Youtube</li>
+</ol>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=GSGaY0-4iik">https://www.youtube.com/watch?v=GSGaY0-4iik</a></li>
+<li><a href="https://www.youtube.com/watch?v=z0XITUisezE">https://www.youtube.com/watch?v=z0XITUisezE</a></li>
+</ul>
+<p>There are others. It’s up to you 💪</p>
 <div class="quarto-auto-generated-content">
 <p><img src="assets/img/logos/ENSGSI.png" class="slide-logo"></p>
 <div class="footer footer-default">
