--- a/Slides.html
+++ b/Slides.html
@@ -472,13 +472,20 @@ MdC. Fabio Cruz
 <p><br><br></p>
 <h3 id="fablab-and-music-httpslowtechlab.orgfr">Fablab and Music: <br> <a href="https://lowtechlab.org/fr">https://lowtechlab.org/fr</a></h3>
 </section>
-<section id="personal-fabrication-3" class="slide level2" data-background-image="figures/Example-7.png" data-background-size="50%" data-background-position="100% 50%">
+<section id="personal-fabrication-3" class="slide level2" data-background-image="figures/Example-7.png" data-background-size="60%" data-background-position="100% 50%">
 <h2>Personal Fabrication</h2>
 <p><em>Products for a market of <strong>one person</strong></em></p>
 <p><br><br></p>
 <h3 id="fablab-and-music">Fablab and Music</h3>
 </section>
-<section id="personal-fabrication-4" class="slide level2" data-background-image="figures/Example-3.png" data-background-size="50%" data-background-position="100% 50%">
+<section id="personal-fabrication-4" class="slide level2" data-background-image="figures/Example-8.png" data-background-size="60%" data-background-position="100% 50%">
+<h2>Personal Fabrication</h2>
+<p><em>Products for a market of <strong>one person</strong></em></p>
+<p><br><br></p>
+<h3 id="fablab-and-music-1">Fablab and Music</h3>
+<p>Source: <a href="https://fab.cba.mit.edu/classes/863.11/people/matthew.keeter/fab_boombox/index.html">Matt Keeter - Fab Boombox</a></p>
+</section>
+<section id="personal-fabrication-5" class="slide level2" data-background-image="figures/Example-3.png" data-background-size="50%" data-background-position="100% 50%">
 <h2>Personal Fabrication</h2>
 <p><em>Products for a market of <strong>one person</strong></em></p>
 <p><br><br></p>
@@ -487,20 +494,20 @@ MdC. Fabio Cruz
 <li>Version English: <a href="https://www.appropedia.org/">https://www.appropedia.org/</a></li>
 </ul>
 </section>
-<section id="personal-fabrication-5" class="slide level2" data-background-image="figures/Example-4.png" data-background-size="50%" data-background-position="100% 50%">
+<section id="personal-fabrication-6" class="slide level2" data-background-image="figures/Example-4.png" data-background-size="50%" data-background-position="100% 50%">
 <h2>Personal Fabrication</h2>
 <p><em>Products for a market of <strong>one person</strong></em></p>
 <p><br><br></p>
 <h3 id="fablab-et-fashion-httpsclass.textile-academy.org">Fablab et Fashion: <br> <a href="https://class.textile-academy.org/classes/2023-24/">https://class.textile-academy.org/</a></h3>
 
 <img data-src="figures/Joins.jpg" class="quarto-figure quarto-figure-left r-stretch" width="100"></section>
-<section id="personal-fabrication-6" class="slide level2" data-background-image="figures/Example-5.png" data-background-size="50%" data-background-position="100% 50%">
+<section id="personal-fabrication-7" class="slide level2" data-background-image="figures/Example-5.png" data-background-size="50%" data-background-position="100% 50%">
 <h2>Personal Fabrication</h2>
 <p><em>Products for a market of <strong>one person</strong></em></p>
 <p><br><br></p>
 <h3 id="fablab-and-agriculture-httpswww.latelierpaysan.org">Fablab and Agriculture: <br> <a href="https://www.latelierpaysan.org/">https://www.latelierpaysan.org/</a></h3>
 </section>
-<section id="personal-fabrication-7" class="slide level2" data-background-image="figures/Example-6.png" data-background-size="50%" data-background-position="100% 50%">
+<section id="personal-fabrication-8" class="slide level2" data-background-image="figures/Example-6.png" data-background-size="50%" data-background-position="100% 50%">
 <h2>Personal Fabrication</h2>
 <p><em>Products for a market of <strong>one person</strong></em></p>
 <p><br><br></p>
