--- a/Slides.html
+++ b/Slides.html
@@ -323,6 +323,8 @@
       margin-right: 0; 
     }
   </style>
+  <link href="Slides_files/libs/countdown-0.4.0/countdown.css" rel="stylesheet">
+  <script src="Slides_files/libs/countdown-0.4.0/countdown.js"></script>
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -606,23 +608,81 @@ MdC. Fabio Cruz
 <section id="questions" class="slide level2 center">
 <h2>Questions?</h2>
 </section></section>
+<section>
 <section id="tp-design-your-prototype" class="title-slide slide level1 center">
 <h1>TP: Design your prototype</h1>
-<ol type="1">
-<li>DIY some tutorials on Inkscape on 🎥 Youtube</li>
-</ol>
+
+</section>
+<section id="step-1-dessinez-votre-objet" class="slide level2">
+<h2>Step 1: Dessinez votre objet</h2>
+
+<img data-src="figures/Design.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"><div class="cell">
+<div class="cell-output-display">
+<div class="countdown" id="timer_6f5e7b5e" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
+<code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+</div>
+</div>
+</section>
+<section id="step-2-download-and-install-inkscape" class="slide level2">
+<h2>Step 2: Download and install <code>Inkscape</code></h2>
+
+<img data-src="figures/Inkscape-00.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"><p class="caption"><a href="https://inkscape.org/">https://inkscape.org/</a></p><div class="cell">
+<div class="cell-output-display">
+<div class="countdown" id="timer_d4c8fef5" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
+<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+</div>
+</div>
+</section>
+<section id="step-3-import-and-adjust-the-document" class="slide level2">
+<h2>Step 3: Import and adjust the document</h2>
+<p>The size needs to be <span class="math inline">\(100x100~mmm\)</span> max</p>
+
+<img data-src="figures/Inkscape-01.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"></section>
+<section id="step-4-crop-your-image" class="slide level2">
+<h2>Step 4: Crop your image</h2>
+
+<img data-src="figures/Inkscape-02.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"></section>
+<section id="step-4-vectorize-your-image" class="slide level2">
+<h2>Step 4: Vectorize your image</h2>
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="figures/Inkscape-03.png" class="quarto-figure quarto-figure-center" style="width:80.0%"></p>
+</figure>
+</div>
+
+<aside><div>
+<p>Additional DIY 🎥 Youtube tutorials if you need:</p>
 <ul>
-<li><a href="https://www.youtube.com/watch?v=GSGaY0-4iik">https://www.youtube.com/watch?v=GSGaY0-4iik</a></li>
-<li><a href="https://www.youtube.com/watch?v=z0XITUisezE">https://www.youtube.com/watch?v=z0XITUisezE</a></li>
+<li><a href="https://youtube.com/watch?v=aVPV6AtjGBg">https://youtube.com/watch?v=aVPV6AtjGBg</a></li>
+<li><a href="https://www.youtube.com/watch?v=i6s_iOVIxUA">https://www.youtube.com/watch?v=i6s_iOVIxUA</a></li>
 </ul>
-<p>There are others. It’s up to you 💪</p>
+</div></aside></section>
+<section id="step-5-prepare-your-image-for-laser-cut" class="slide level2">
+<h2>Step 5: Prepare your image for laser-cut</h2>
+<ul>
+<li>Red color : Cutting</li>
+<li>Blue color: graving</li>
+</ul>
+
+<img data-src="figures/Inkscape-04.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"></section>
+<section id="step-6-connect-to-fabmanager" class="slide level2">
+<h2>Step 6: Connect to Fabmanager</h2>
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="figures/fabmanager-00.png" class="quarto-figure quarto-figure-center" style="width:80.0%"></p>
+</figure>
+</div>
 <div class="quarto-auto-generated-content">
 <p><img src="assets/img/logos/ENSGSI.png" class="slide-logo"></p>
 <div class="footer footer-default">
 
 </div>
 </div>
-</section>
+</section></section>
     </div>
   </div>
 
@@ -835,6 +895,44 @@ MdC. Fabio Cruz
         ]
       });
     </script>
+    
+    <script>
+      // htmlwidgets need to know to resize themselves when slides are shown/hidden.
+      // Fire the "slideenter" event (handled by htmlwidgets.js) when the current
+      // slide changes (different for each slide format).
+      (function () {
+        // dispatch for htmlwidgets
+        function fireSlideEnter() {
+          const event = window.document.createEvent("Event");
+          event.initEvent("slideenter", true, true);
+          window.document.dispatchEvent(event);
+        }
+
+        function fireSlideChanged(previousSlide, currentSlide) {
+          fireSlideEnter();
+
+          // dispatch for shiny
+          if (window.jQuery) {
+            if (previousSlide) {
+              window.jQuery(previousSlide).trigger("hidden");
+            }
+            if (currentSlide) {
+              window.jQuery(currentSlide).trigger("shown");
+            }
+          }
+        }
+
+        // hookup for slidy
+        if (window.w3c_slidy) {
+          window.w3c_slidy.add_observer(function (slide_num) {
+            // slide_num starts at position 1
+            fireSlideChanged(null, w3c_slidy.slides[slide_num - 1]);
+          });
+        }
+
+      })();
+    </script>
+
     <script id="quarto-html-after-body" type="application/javascript">
     window.document.addEventListener("DOMContentLoaded", function (event) {
       const toggleBodyColorMode = (bsSheetEl) => {
