adding second exercise

--- a/Slides.html
+++ b/Slides.html
@@ -613,12 +613,12 @@ MdC. Fabio Cruz
 <h1>TP: Design your prototype</h1>
 
 </section>
-<section id="step-1-dessinez-votre-objet" class="slide level2">
-<h2>Step 1: Dessinez votre objet</h2>
+<section id="step-1-draw-you-totem" class="slide level2">
+<h2>Step 1: Draw you totem</h2>
 
 <img data-src="figures/Design.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_6f5e7b5e" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_06c1663c" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -630,7 +630,7 @@ MdC. Fabio Cruz
 
 <img data-src="figures/Inkscape-00.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"><p class="caption"><a href="https://inkscape.org/">https://inkscape.org/</a></p><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_d4c8fef5" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_1fb8a08a" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -671,18 +671,26 @@ MdC. Fabio Cruz
 <img data-src="figures/Inkscape-04.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"></section>
 <section id="step-6-connect-to-fabmanager" class="slide level2">
 <h2>Step 6: Connect to Fabmanager</h2>
+<p><a href="https://fabmanager.lf2l.fr/">https://fabmanager.lf2l.fr/</a></p>
+
+<img data-src="figures/fabmanager-00.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"></section>
+<section id="exercise-2-vectorize-your-photo" class="slide level2">
+<h2>Exercise 2: Vectorize your photo</h2>
 <div class="quarto-figure quarto-figure-center">
 <figure>
-<p><img data-src="figures/fabmanager-00.png" class="quarto-figure quarto-figure-center" style="width:80.0%"></p>
+<p><img data-src="figures/Inkscape-05.png" class="quarto-figure quarto-figure-center" style="width:70.0%"></p>
 </figure>
 </div>
+
 <div class="quarto-auto-generated-content">
 <p><img src="assets/img/logos/ENSGSI.png" class="slide-logo"></p>
 <div class="footer footer-default">
 
 </div>
 </div>
-</section></section>
+<aside><div>
+<p>Tutorial 🎥 Youtube: <a href="https://www.youtube.com/watch?v=wiqUrzzHszI&amp;t=690s">https://www.youtube.com/watch?v=wiqUrzzHszI&amp;t=690s</a></p>
+</div></aside></section></section>
     </div>
   </div>
 
