--- a/Slides.html
+++ b/Slides.html
@@ -154,6 +154,7 @@ MdC. Fabio Cruz
 <li><a href="#/planning" id="/toc-planning">Planning</a></li>
 <li><a href="#/lorraine-fab-living-lab" id="/toc-lorraine-fab-living-lab">Lorraine Fab Living Lab</a></li>
 <li><a href="#/tp-design-your-prototype" id="/toc-tp-design-your-prototype">TP: Design your prototype</a></li>
+<li><a href="#/electronic" id="/toc-electronic">Electronic</a></li>
 <li><a href="#/engineering-and-âge-du-faire-diy" id="/toc-engineering-and-âge-du-faire-diy">Engineering and ‘Âge du Faire / DIY’</a></li>
 </ul>
 </nav>
@@ -194,9 +195,9 @@ MdC. Fabio Cruz
 
 <img data-src="figures/Exquisse.png" class="quarto-figure quarto-figure-center r-stretch" style="width:50.0%"><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_d63a0c1c" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_0c0cc09f" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 </div>
 </div>
@@ -225,11 +226,11 @@ MdC. Fabio Cruz
 </tr>
 <tr class="even">
 <td style="text-align: left;">15:30 - 16:00</td>
-<td style="text-align: left;"><strong>Exercice 2: Design + Fabrication</strong></td>
+<td style="text-align: left;"><strong>Exercice 2: Electronics</strong></td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">16:00 - 16:45</td>
-<td style="text-align: left;"><strong>Documentate</strong></td>
+<td style="text-align: left;"><strong>Documentation</strong></td>
 </tr>
 </tbody>
 </table>
@@ -341,7 +342,7 @@ MdC. Fabio Cruz
 
 <img data-src="figures/Design.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_34b950e7" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_053026a7" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -353,7 +354,7 @@ MdC. Fabio Cruz
 
 <img data-src="figures/Inkscape-00.png" style="width:80.0%" class="r-stretch quarto-figure-center"><p class="caption"><a href="https://inkscape.org/">https://inkscape.org/</a></p><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_eabd4552" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_7a793df7" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -496,6 +497,11 @@ MdC. Fabio Cruz
 </div>
 </div>
 </section></section>
+<section id="electronic" class="title-slide slide level1 center">
+<h1>Electronic</h1>
+
+</section>
+
 <section>
 <section id="engineering-and-âge-du-faire-diy" class="title-slide slide level1 center">
 <h1>Engineering and ‘Âge du Faire / DIY’</h1>
