--- a/Slides.html
+++ b/Slides.html
@@ -192,10 +192,12 @@ MdC. Fabio Cruz
 </div></section>
 <section id="but-first-lets-esquisse" class="slide level2">
 <h2>but first, lets <em>‘esquisse’</em></h2>
+<p>Option 🤩 : <strong>Un produit ou service dont vous rêvez d’avoir à l’avenir ?</strong></p>
+<p>Option 😨 : <strong>Un produit ou service que vous ne voudriez pas du tout avoir à l’avenir ?</strong></p>
 
 <img data-src="figures/Exquisse.png" class="quarto-figure quarto-figure-center r-stretch" style="width:50.0%"><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_0c0cc09f" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_55253694" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -342,7 +344,7 @@ MdC. Fabio Cruz
 
 <img data-src="figures/Design.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_053026a7" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_ecc05cec" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -354,7 +356,7 @@ MdC. Fabio Cruz
 
 <img data-src="figures/Inkscape-00.png" style="width:80.0%" class="r-stretch quarto-figure-center"><p class="caption"><a href="https://inkscape.org/">https://inkscape.org/</a></p><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_7a793df7" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_7cbea2ec" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
