--- a/Slides.html
+++ b/Slides.html
@@ -11,7 +11,7 @@
 
   <meta name="author" content="MdC. Fabio Cruz">
   <meta name="dcterms.date" content="2025-04-02">
-  <title>Age du Faire et du Do-It-Youself (DIY)</title>
+  <title>Age du Faire et du Do-It-Yourself (DIY)</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -132,7 +132,7 @@
     <div class="slides">
 
 <section id="title-slide" class="quarto-title-block center">
-  <h1 class="title">Age du Faire et du Do-It-Youself (DIY)</h1>
+  <h1 class="title">Age du Faire et du Do-It-Yourself (DIY)</h1>
   <p class="subtitle">An introduction</p>
 
 <div class="quarto-title-authors">
@@ -197,7 +197,7 @@ MdC. Fabio Cruz
 
 <img data-src="figures/Exquisse.png" class="quarto-figure quarto-figure-center r-stretch" style="width:50.0%"><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_fdeaba7b" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_a04ac9a1" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -344,7 +344,7 @@ MdC. Fabio Cruz
 
 <img data-src="figures/Design.png" class="quarto-figure quarto-figure-center r-stretch" style="width:80.0%"><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_ab981c55" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_765a0c01" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -356,7 +356,7 @@ MdC. Fabio Cruz
 
 <img data-src="figures/Inkscape-00.png" style="width:80.0%" class="r-stretch quarto-figure-center"><p class="caption"><a href="https://inkscape.org/">https://inkscape.org/</a></p><div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_baf35709" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
+<div class="countdown" id="timer_3440a9a7" data-update-every="1" tabindex="0" style="right:0;bottom:0;font-size:2.5em;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -508,12 +508,6 @@ MdC. Fabio Cruz
 <section id="engineering-and-âge-du-faire-diy" class="title-slide slide level1 center">
 <h1>Engineering and ‘Âge du Faire / DIY’</h1>
 
-</section>
-<section id="what-is-the-meaning-of-engineer-for-you" class="slide level2">
-<h2>What is the meaning of “Engineer” for you ?</h2>
-<div class="fragment">
-<p>The word <strong>Engineer</strong> (Latin <em>Ingeniator</em>) is derived from the Latin words <strong>Ingeniare</strong> (“to contrive, devise”) and <strong>Ingenium</strong> (“cleverness”).</p>
-</div>
 </section>
 <section id="fab-lab-and-how-to-do-almost-anything" class="slide level2">
 <h2>Fab Lab and how to do (almost) anything</h2>
